--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="redes">
                         <div>
                             <a href="#"><img src="imagem/bolha-de-bate-papo (1).png" alt="tel"></a>
-                            <a href="#"><img src="imagem/instagram (1).png" alt="inst"></a>
+                            <a href="https://www.instagram.com/emillyjuliasobrancelhass/" target="_blank"><img src="imagem/instagram (1).png" alt="inst"></a>
                             <a href="#"><img src="imagem/facebook (1).png" alt="face"></a>
                         </div>
                     </div>
